# ZLS

./: .gitignore  README.md
conciliator/: .gitignore  app.py  pyproject.toml
obs-plugin/: zls.lua
scripts/: run.sh  run_all.sh  run_audio.sh  send.sh  send_audio.sh
