[tool.poetry]
name = "zls-concilier"
version = "0.1.0"
description = ""
authors = ["Amaury Carrade <amaury@carrade.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
pymediainfo = "^5.1.0"
pymkv = "^1.0.8"
humanize = "^4.0.0"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
